apps/base/infisical/infisical.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical-system
  labels:
    networking.tinyrack.net/isolation: enabled
